
2011-04-19:
 - run sudo npm install config
 - configuration system added
   run as:
   $ cd stanzr
   $ node node/main/lib/main.js -config ./conf/node/<configname>.js
   where configname is one of demo, staging, design

2011-04-22:
 - npm updates:
   sudo npm install oauth
   sudo npm install linkedin-js

